# cppexamples

./: .gitignore  .vimspector.json  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  a.out  class.cpp  cmake_install.cmake  demo.cpp  first.cpp  log.h  peda-session-unknown.txt  printer  vector.cpp
ArrayPointers/: #ArrayPointersDemo.cpp#  .gdb_history  APD  ArrayPointersDemo  ArrayPointersDemo.cpp  a.out  peda-session-ArrayPointersDemo.txt
ArraysDemo/: ArrayDemo.cpp  as  meson.build
BeautyPhi/: BeautiPhi  BeautiPhi.cpp  BeautyPhi
BinaryTree/: BinaryTreeInPre.cpp
DijkstraDemo/: #DijkstraAlgo.cpp#  DAG  Dij  Dijkstra  DijkstraAlgo  DijkstraAlgo.cpp  DijkstraAlgo.i64  nwe.cpp
FunctionPointers/: FPD  FunctionPointersDemo.cpp  FunctionPointersDemo.cpp~
HelloWorld/: CMakeLists.txt
KruskalAlgo/: Kruskal  KruskalAlgo.cpp  KruskalAlgoInput.txt  tags
LogLogger/: main  main.cpp
NameSpace/: namen  namespace.cpp
NumberDemo/: NumberDemo  NumberDemo.cpp
Patterns/: Swastik.cpp  swastik
Pointers/: .gdb_history  PointersDemo  PointersDemo.cpp  PointersDemo2  PointersDemo2.cpp  git.txt
SimpleEQ/: SimpleEQ.jucer
StringDemo/: StringDemo  StringDemo.cpp
SubsequencesDemo/: Subs  SubsequencesDemo.cpp
Threads/: threads  threads.cpp
UserInputDemo/: UserInputDemo  UserInputDemo.cpp
VariableDemo/: DataTypes  Variable  (+2 more)
ftxui-first/: CMakeLists.txt
ftxui-first/.cache/clangd/index/: main.cpp.24E60515D3F94E79.idx  main.cpp.EC1FB9AE443F5D29.idx
ftxui-first/src/: main.cpp
gtest/: CMakeLists.txt  hello_test  hello_test[1]_include.cmake  hellotest.cpp
gtest/.cache/clangd/index/: CMakeCCompilerId.c.E8333989A96F8DA7.idx  CMakeCXXCompilerId.cpp.78E12E102EF68343.idx
(+79 files in other folders)
